Issue #4, menu can now be toggled on mobile screens, needs perfection on smaller width

--- a/assets/css/asteol.css
+++ b/assets/css/asteol.css
@@ -77,7 +77,23 @@ li.menu-item-has-children::after {
     display: block !important;
     background-color: #fff;
     z-index: 99;
-    border: 1px solid gray;
+    border: 1px solid #666;
+    left: 0;
+    border-left: none;
+    padding: 0.7em 0.9em;
+    border-bottom-right-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+}
+
+.menu-toggle .icon {
+    margin-right: 0.15em;
+}
+
+.menu-close {
+    padding: 0.25em 0.5em;
+    position: absolute;
+    right: 1em;
+    top: 1em;
 }
 
 @media (min-width: 576px) {
@@ -101,6 +117,6 @@ li.menu-item-has-children::after {
     }
 
     .menu-toggle {
-        //display: none;
+        display: none !important;
     }
 }
